Expresiones21Parser.py
# Generated from Expresiones21.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class Expresiones21Parser ( Parser ):

    grammarFileName = "Expresiones21.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program {'", "'{'", "'}'", "'if'", "'else'", 
                     "'int'", "'float'", "'string'", "'('", "')'", "';'", 
                     "'='", "'+'", "'-'", "'/'", "'*'", "'>='", "'<='", 
                     "'>'", "'<'", "'=='", "'<>'", "'!='", "'&&'", "'||'", 
                     "'!'" ]

    symbolicNames = [ "<INVALID>", "INI", "INILLAVE", "FIN", "IF", "ELSE", 
                      "INT", "FLOAT", "STRING", "PARENI", "PAREND", "SEMI", 
                      "ASSIGN", "SUM", "REST", "DIV", "MUL", "MAYORIGUAL", 
                      "MENORIGUAL", "MAYOR", "MENOR", "IGUAL", "NOIGUAL", 
                      "DIFF", "AND", "OR", "NOT", "VAR", "NUM", "FNUM", 
                      "STRVAL", "WS" ]

    RULE_root = 0
    RULE_bloque = 1
    RULE_statement = 2
    RULE_varint = 3
    RULE_asignacion = 4
    RULE_ifstm = 5
    RULE_expr = 6
    RULE_logicalOr = 7
    RULE_logicalAnd = 8
    RULE_igualdad = 9
    RULE_comparacion = 10
    RULE_suma = 11
    RULE_producto = 12
    RULE_unario = 13
    RULE_primario = 14

    ruleNames =  [ "root", "bloque", "statement", "varint", "asignacion", 
                   "ifstm", "expr", "logicalOr", "logicalAnd", "igualdad", 
                   "comparacion", "suma", "producto", "unario", "primario" ]

    EOF = Token.EOF
    INI=1
    INILLAVE=2
    FIN=3
    IF=4
    ELSE=5
    INT=6
    FLOAT=7
    STRING=8
    PARENI=9
    PAREND=10
    SEMI=11
    ASSIGN=12
    SUM=13
    REST=14
    DIV=15
    MUL=16
    MAYORIGUAL=17
    MENORIGUAL=18
    MAYOR=19
    MENOR=20
    IGUAL=21
    NOIGUAL=22
    DIFF=23
    AND=24
    OR=25
    NOT=26
    VAR=27
    NUM=28
    FNUM=29
    STRVAL=30
    WS=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INILLAVE(self):
            return self.getToken(Expresiones21Parser.INILLAVE, 0)

        def bloque(self):
            return self.getTypedRuleContext(Expresiones21Parser.BloqueContext,0)


        def FIN(self):
            return self.getToken(Expresiones21Parser.FIN, 0)

        def EOF(self):
            return self.getToken(Expresiones21Parser.EOF, 0)

        def INI(self, i:int=None):
            if i is None:
                return self.getTokens(Expresiones21Parser.INI)
            else:
                return self.getToken(Expresiones21Parser.INI, i)

        def getRuleIndex(self):
            return Expresiones21Parser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = Expresiones21Parser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 30
                self.match(Expresiones21Parser.INI)
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 36
            self.match(Expresiones21Parser.INILLAVE)
            self.state = 37
            self.bloque()
            self.state = 38
            self.match(Expresiones21Parser.FIN)
            self.state = 39
            self.match(Expresiones21Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INILLAVE(self):
            return self.getToken(Expresiones21Parser.INILLAVE, 0)

        def FIN(self):
            return self.getToken(Expresiones21Parser.FIN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Expresiones21Parser.StatementContext)
            else:
                return self.getTypedRuleContext(Expresiones21Parser.StatementContext,i)


        def getRuleIndex(self):
            return Expresiones21Parser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = Expresiones21Parser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_bloque)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(Expresiones21Parser.INILLAVE)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 134218192) != 0):
                self.state = 42
                self.statement()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 48
            self.match(Expresiones21Parser.FIN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varint(self):
            return self.getTypedRuleContext(Expresiones21Parser.VarintContext,0)


        def SEMI(self):
            return self.getToken(Expresiones21Parser.SEMI, 0)

        def asignacion(self):
            return self.getTypedRuleContext(Expresiones21Parser.AsignacionContext,0)


        def ifstm(self):
            return self.getTypedRuleContext(Expresiones21Parser.IfstmContext,0)


        def getRuleIndex(self):
            return Expresiones21Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = Expresiones21Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 57
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6, 7, 8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.varint()
                self.state = 51
                self.match(Expresiones21Parser.SEMI)
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.asignacion()
                self.state = 54
                self.match(Expresiones21Parser.SEMI)
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 56
                self.ifstm()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(Expresiones21Parser.INT, 0)

        def VAR(self):
            return self.getToken(Expresiones21Parser.VAR, 0)

        def FLOAT(self):
            return self.getToken(Expresiones21Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(Expresiones21Parser.STRING, 0)

        def getRuleIndex(self):
            return Expresiones21Parser.RULE_varint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarint" ):
                listener.enterVarint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarint" ):
                listener.exitVarint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarint" ):
                return visitor.visitVarint(self)
            else:
                return visitor.visitChildren(self)




    def varint(self):

        localctx = Expresiones21Parser.VarintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varint)
        try:
            self.state = 65
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.match(Expresiones21Parser.INT)
                self.state = 60
                self.match(Expresiones21Parser.VAR)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.match(Expresiones21Parser.FLOAT)
                self.state = 62
                self.match(Expresiones21Parser.VAR)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 63
                self.match(Expresiones21Parser.STRING)
                self.state = 64
                self.match(Expresiones21Parser.VAR)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(Expresiones21Parser.VAR, 0)

        def ASSIGN(self):
            return self.getToken(Expresiones21Parser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(Expresiones21Parser.ExprContext,0)


        def getRuleIndex(self):
            return Expresiones21Parser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = Expresiones21Parser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(Expresiones21Parser.VAR)
            self.state = 68
            self.match(Expresiones21Parser.ASSIGN)
            self.state = 69
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstmContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(Expresiones21Parser.IF, 0)

        def PARENI(self):
            return self.getToken(Expresiones21Parser.PARENI, 0)

        def expr(self):
            return self.getTypedRuleContext(Expresiones21Parser.ExprContext,0)


        def PAREND(self):
            return self.getToken(Expresiones21Parser.PAREND, 0)

        def bloque(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Expresiones21Parser.BloqueContext)
            else:
                return self.getTypedRuleContext(Expresiones21Parser.BloqueContext,i)


        def ELSE(self):
            return self.getToken(Expresiones21Parser.ELSE, 0)

        def getRuleIndex(self):
            return Expresiones21Parser.RULE_ifstm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfstm" ):
                listener.enterIfstm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfstm" ):
                listener.exitIfstm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfstm" ):
                return visitor.visitIfstm(self)
            else:
                return visitor.visitChildren(self)




    def ifstm(self):

        localctx = Expresiones21Parser.IfstmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifstm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(Expresiones21Parser.IF)
            self.state = 72
            self.match(Expresiones21Parser.PARENI)
            self.state = 73
            self.expr()
            self.state = 74
            self.match(Expresiones21Parser.PAREND)
            self.state = 75
            self.bloque()

            self.state = 76
            self.match(Expresiones21Parser.ELSE)
            self.state = 77
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalOr(self):
            return self.getTypedRuleContext(Expresiones21Parser.LogicalOrContext,0)


        def getRuleIndex(self):
            return Expresiones21Parser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = Expresiones21Parser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.logicalOr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalOrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalAnd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Expresiones21Parser.LogicalAndContext)
            else:
                return self.getTypedRuleContext(Expresiones21Parser.LogicalAndContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(Expresiones21Parser.OR)
            else:
                return self.getToken(Expresiones21Parser.OR, i)

        def getRuleIndex(self):
            return Expresiones21Parser.RULE_logicalOr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalOr" ):
                listener.enterLogicalOr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalOr" ):
                listener.exitLogicalOr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalOr" ):
                return visitor.visitLogicalOr(self)
            else:
                return visitor.visitChildren(self)




    def logicalOr(self):

        localctx = Expresiones21Parser.LogicalOrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_logicalOr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.logicalAnd()
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 82
                self.match(Expresiones21Parser.OR)
                self.state = 83
                self.logicalAnd()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalAndContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def igualdad(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Expresiones21Parser.IgualdadContext)
            else:
                return self.getTypedRuleContext(Expresiones21Parser.IgualdadContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(Expresiones21Parser.AND)
            else:
                return self.getToken(Expresiones21Parser.AND, i)

        def getRuleIndex(self):
            return Expresiones21Parser.RULE_logicalAnd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalAnd" ):
                listener.enterLogicalAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalAnd" ):
                listener.exitLogicalAnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalAnd" ):
                return visitor.visitLogicalAnd(self)
            else:
                return visitor.visitChildren(self)




    def logicalAnd(self):

        localctx = Expresiones21Parser.LogicalAndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_logicalAnd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.igualdad()
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 90
                self.match(Expresiones21Parser.AND)
                self.state = 91
                self.igualdad()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IgualdadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comparacion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Expresiones21Parser.ComparacionContext)
            else:
                return self.getTypedRuleContext(Expresiones21Parser.ComparacionContext,i)


        def IGUAL(self, i:int=None):
            if i is None:
                return self.getTokens(Expresiones21Parser.IGUAL)
            else:
                return self.getToken(Expresiones21Parser.IGUAL, i)

        def NOIGUAL(self, i:int=None):
            if i is None:
                return self.getTokens(Expresiones21Parser.NOIGUAL)
            else:
                return self.getToken(Expresiones21Parser.NOIGUAL, i)

        def DIFF(self, i:int=None):
            if i is None:
                return self.getTokens(Expresiones21Parser.DIFF)
            else:
                return self.getToken(Expresiones21Parser.DIFF, i)

        def getRuleIndex(self):
            return Expresiones21Parser.RULE_igualdad

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIgualdad" ):
                listener.enterIgualdad(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIgualdad" ):
                listener.exitIgualdad(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIgualdad" ):
                return visitor.visitIgualdad(self)
            else:
                return visitor.visitChildren(self)




    def igualdad(self):

        localctx = Expresiones21Parser.IgualdadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_igualdad)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.comparacion()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 14680064) != 0):
                self.state = 98
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 14680064) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 99
                self.comparacion()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def suma(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Expresiones21Parser.SumaContext)
            else:
                return self.getTypedRuleContext(Expresiones21Parser.SumaContext,i)


        def MAYOR(self, i:int=None):
            if i is None:
                return self.getTokens(Expresiones21Parser.MAYOR)
            else:
                return self.getToken(Expresiones21Parser.MAYOR, i)

        def MENOR(self, i:int=None):
            if i is None:
                return self.getTokens(Expresiones21Parser.MENOR)
            else:
                return self.getToken(Expresiones21Parser.MENOR, i)

        def MAYORIGUAL(self, i:int=None):
            if i is None:
                return self.getTokens(Expresiones21Parser.MAYORIGUAL)
            else:
                return self.getToken(Expresiones21Parser.MAYORIGUAL, i)

        def MENORIGUAL(self, i:int=None):
            if i is None:
                return self.getTokens(Expresiones21Parser.MENORIGUAL)
            else:
                return self.getToken(Expresiones21Parser.MENORIGUAL, i)

        def getRuleIndex(self):
            return Expresiones21Parser.RULE_comparacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparacion" ):
                listener.enterComparacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparacion" ):
                listener.exitComparacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparacion" ):
                return visitor.visitComparacion(self)
            else:
                return visitor.visitChildren(self)




    def comparacion(self):

        localctx = Expresiones21Parser.ComparacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_comparacion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.suma()
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1966080) != 0):
                self.state = 106
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1966080) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 107
                self.suma()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SumaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def producto(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Expresiones21Parser.ProductoContext)
            else:
                return self.getTypedRuleContext(Expresiones21Parser.ProductoContext,i)


        def SUM(self, i:int=None):
            if i is None:
                return self.getTokens(Expresiones21Parser.SUM)
            else:
                return self.getToken(Expresiones21Parser.SUM, i)

        def REST(self, i:int=None):
            if i is None:
                return self.getTokens(Expresiones21Parser.REST)
            else:
                return self.getToken(Expresiones21Parser.REST, i)

        def getRuleIndex(self):
            return Expresiones21Parser.RULE_suma

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSuma" ):
                listener.enterSuma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSuma" ):
                listener.exitSuma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSuma" ):
                return visitor.visitSuma(self)
            else:
                return visitor.visitChildren(self)




    def suma(self):

        localctx = Expresiones21Parser.SumaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_suma)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.producto()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13 or _la==14:
                self.state = 114
                _la = self._input.LA(1)
                if not(_la==13 or _la==14):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 115
                self.producto()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProductoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unario(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Expresiones21Parser.UnarioContext)
            else:
                return self.getTypedRuleContext(Expresiones21Parser.UnarioContext,i)


        def MUL(self, i:int=None):
            if i is None:
                return self.getTokens(Expresiones21Parser.MUL)
            else:
                return self.getToken(Expresiones21Parser.MUL, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(Expresiones21Parser.DIV)
            else:
                return self.getToken(Expresiones21Parser.DIV, i)

        def getRuleIndex(self):
            return Expresiones21Parser.RULE_producto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProducto" ):
                listener.enterProducto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProducto" ):
                listener.exitProducto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProducto" ):
                return visitor.visitProducto(self)
            else:
                return visitor.visitChildren(self)




    def producto(self):

        localctx = Expresiones21Parser.ProductoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_producto)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.unario()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15 or _la==16:
                self.state = 122
                _la = self._input.LA(1)
                if not(_la==15 or _la==16):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 123
                self.unario()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnarioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(Expresiones21Parser.NOT, 0)

        def unario(self):
            return self.getTypedRuleContext(Expresiones21Parser.UnarioContext,0)


        def primario(self):
            return self.getTypedRuleContext(Expresiones21Parser.PrimarioContext,0)


        def getRuleIndex(self):
            return Expresiones21Parser.RULE_unario

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnario" ):
                listener.enterUnario(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnario" ):
                listener.exitUnario(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnario" ):
                return visitor.visitUnario(self)
            else:
                return visitor.visitChildren(self)




    def unario(self):

        localctx = Expresiones21Parser.UnarioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_unario)
        try:
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.match(Expresiones21Parser.NOT)
                self.state = 130
                self.unario()
                pass
            elif token in [9, 27, 28, 29, 30]:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.primario()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimarioContext(ParserRuleContext):
        __slots__ = 'parser'
